# afdian-list-printer

./: .editorconfig  Cargo.toml  config.example.toml  readme.md
.github/workflows/: Release.yml
src/: config.rs  donors.hbs  donors.jinja2  donors.rs  login.rs  main.rs  types.rs
